--- a/app/views/meals/_meal.html.erb
+++ b/app/views/meals/_meal.html.erb
@@ -2,8 +2,8 @@
 <p class="meal-time card-text"><%= "#{meal.day.strftime("%A")} #{meal.day.strftime("%b")} #{meal.day.day.ordinalize}"%></p>
 
 <% if !meal.user_id && current_user.is_admin %>
-    <%= render partial: 'meals/form', locals: {this_meal: meal}%>
+    <%= render partial: 'meals/form', locals: {this_meal: meal} %>
 <% else %>
-  <p class="card-text"><%= meal.statement %></p>
+    <%= render partial: 'meals/accounted_for', locals: {meal: meal} %>
 <% end %>
 </div>
