--- a/app/views/vacations/_right_side.html.erb
+++ b/app/views/vacations/_right_side.html.erb
@@ -1,4 +1,4 @@
-<ul class="topic-tabs nav nav-tabs nav-justified">
+<ul id="vacation<%=@vacation.id%>" class="topic-tabs nav nav-tabs nav-justified">
   <% ordered_resource(@vacation.topics).each do |topic| %>
     <li id="topic<%=topic.id%>" class="topic-tab"><%= link_to topic.name, vacation_topic_path(@vacation, topic) %></li>
   <% end %>
