--- a/app/views/topics/_all_comments_js.html.erb
+++ b/app/views/topics/_all_comments_js.html.erb
@@ -2,27 +2,25 @@
 <div class="comment-container col-md-12">
   <p><%= current_user.full_name %> |
     <% if is_own_comment?(comment) %>
-      <%= link_to 'Edit', edit_vacation_topic_comment_path(current_vacation, current_topic, comment) %>
+      <%= link_to 'Edit', edit_vacation_topic_comment_path(current_vacation, current_topic, comment), class: 'edit-comment' %>
       <%= link_to 'Delete', [current_vacation, current_topic, comment], :confirm => 'Are you sure?', :method => :delete %>
     <% elsif has_superiority?(comment) %>
       <%= link_to 'Delete', [current_vacation, current_topic, comment], :confirm => 'Are you sure?', :method => :delete %>
     <% end %>
     </p>
-  <p><%= comment.content %></p>
+  <p class='p-content' id="comment<%=comment.id%>"><%= comment.content %></p>
 </div>
 <% end %>
 
-<div class="new-comment-form">
+<div class="comment-container col-md-12">
 <% if @topic.is_open %>
-  <h2>Write a Comment</h2>
-  <%= form_for([current_vacation, current_topic, @comment]) do |f| %>
-    <div class="field">
-      <%= f.text_field :content, placeholder: "Write your comment here" %>
-    </div>
-    <div class="actions">
+  <p><%= current_user.full_name %></p>
+  <%= form_for([current_vacation, current_topic, @comment], :html => {class: "form-inline"}) do |f| %>
+      <div class="input-group col-md-8">
+        <%= f.text_field :content, placeholder: "Write your comment here ('enter' to submit)", class: "comment-input form-control input-sm" %>
+      </div>
       <%= hidden_field_tag 'user_id', current_user.id %>
-      <%= f.submit class: 'btn btn-default'%>
-    </div>
+      <%= f.submit class: 'hidden btn btn-default'%>
   <% end %>
 <% end %>
 </div>
