closing form async style now

--- a/app/views/topics/_single_comment_js.html.erb
+++ b/app/views/topics/_single_comment_js.html.erb
@@ -1,9 +1,9 @@
   <p><%= current_user.full_name %> |
     <% if is_own_comment?(comment) %>
       <%= link_to 'Edit', edit_vacation_topic_comment_path(current_vacation, current_topic, comment), class: 'edit-comment' %>
-      <%= link_to 'Delete', [current_vacation, current_topic, comment], :confirm => 'Are you sure?', :method => :delete, class: 'delete-comment' %>
-    <% elsif has_superiority?(comment) %>
+    <% end %>
+    <% if is_own_comment?(comment) || has_superiority?(comment) %>
       <%= link_to 'Delete', [current_vacation, current_topic, comment], :confirm => 'Are you sure?', :method => :delete, class: 'delete-comment' %>
     <% end %>
-    </p>
+  </p>
   <p class='p-content' id="comment<%=comment.id%>"><%= comment.content %></p>
