--- a/app/views/topics/_all_comments_js.html.erb
+++ b/app/views/topics/_all_comments_js.html.erb
@@ -7,35 +7,37 @@
     <% elsif has_superiority?(comment) %>
       <%= link_to 'Delete', [current_vacation, current_topic, comment], :confirm => 'Are you sure?', :method => :delete %>
     <% end %>
-    </p>
+  </p>
   <p class='p-content' id="comment<%=comment.id%>"><%= comment.content %></p>
 </div>
 <% end %>
 
-<div class="comment-container col-md-12">
 <% if @topic.is_open %>
-  <p><%= current_user.full_name %></p>
-  <%= form_for([current_vacation, current_topic, @comment], :html => {class: "form-inline"}) do |f| %>
-      <div class="input-group col-md-8">
-        <%= f.text_field :content, placeholder: "Write your comment here ('enter' to submit)", class: "comment-input form-control input-sm" %>
-      </div>
-      <%= hidden_field_tag 'user_id', current_user.id %>
-      <%= f.submit class: 'hidden btn btn-default'%>
-  <% end %>
-<% end %>
-</div>
+  <div class="comment-container col-md-12">
+    <p><%= current_user.full_name %></p>
+    <%= form_for([current_vacation, current_topic, @comment], :html => {class: "form-inline"}) do |f| %>
+        <div class="input-group col-md-8">
+          <%= f.text_field :content, placeholder: "Write your comment here ('enter' to submit)", class: "comment-input form-control input-sm" %>
+        </div>
+        <%= hidden_field_tag 'user_id', current_user.id %>
+        <%= f.submit class: 'hidden btn btn-default'%>
+    <% end %>
+  </div>
+<% else %>
+  <p>This forum has been closed, please the other forums for discussion.</p>
+<% end  %>
 
-<div class="close-form-button">
 <% if is_where_when? %>
   <% if current_user.is_admin %>
     <% if @topic.is_open %>
+    <div class="close-form-button">
       <%= form_for([@topic.vacation, @topic], {:method => 'put'}) do |f| %>
-        <div class="actions">
-          <%= f.hidden_field(:is_open, :value => false) %>
-          <%= f.submit :value => "Close Form", class: 'btn btn-primary' %>
-        </div>
+      <div class="actions">
+        <%= f.hidden_field(:is_open, :value => false) %>
+        <%= f.submit :value => "Close Form", class: 'btn btn-primary' %>
+      </div>
+    </div>
       <% end %>
     <% end %>
   <% end %>
 <% end %>
-</div>
